[package]
name = "cameraunit_fli"
version = "0.0.7"
edition = "2021"
rust-version = "1.68.0"
authors = ["Sunip K. Mukherjee"]
license = "MIT OR Apache-2.0"
readme = "README.MD"
repository = "https://github.com/sunipkm/cameraunit"
homepage = "https://crates.io/crates/cameraunit_fli"
keywords = ["cameraunit", "interface", "api", "fli", "camera"]
build = "build.rs"
description = """
An efficient and ergonomic interface to capture images using cameras.
"""
exclude = [".github"]

[[bin]]
name = "flicamera_capture"
path = "src/main.rs"
test = true
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cameraunit = "5.1"
chrono = "0.4"
configparser = "3.0"
ctrlc = "3.4"
fitsio = "0.21"
image = "0.25"
log = "0.4"

[build-dependencies]
bindgen = "0.69"
cc = { version = "1.0.90", features = ["parallel"] }
glob = "0.3"
